fix: no need for hover style on mobile

--- a/assets/css/bundle.css
+++ b/assets/css/bundle.css
@@ -607,13 +607,21 @@ section h2 {
   width: 26px;
   height: 26px;
 }
-.menu-card-checkbox:checked ~ .menu-card-content, .menu-card:hover .menu-card-content {
+.menu-card-checkbox:checked ~ .menu-card-content {
   padding-right: calc(4rem + 16px);
 }
-.menu-card-checkbox:checked ~ .menu-card-content .menu-card-checkmark, .menu-card:hover .menu-card-content .menu-card-checkmark {
+.menu-card-checkbox:checked ~ .menu-card-content .menu-card-checkmark {
   right: 0;
 }
 
+@media (min-width: 1024px) {
+  .menu-card:hover .menu-card-content {
+    padding-right: calc(4rem + 16px);
+  }
+  .menu-card:hover .menu-card-content .menu-card-checkmark {
+    right: 0;
+  }
+}
 @keyframes menu-slide-up {
   0% {
     opacity: 0;
